--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -80,9 +80,9 @@
   <tr><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/audio#Player.Seek"><code>(*audio.Player).Seek</code></a></td><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/audio#Player.SetPosition"><code>SetPosition</code></a></td></tr>
   <tr><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text#BoundString"><code>text.BoundString</code></a></td><td><a href="https://pkg.go.dev/golang.org/x/image/font#BoundString"><code>golang.org/x/image/font.BoundString</code></a> か、または <a href="https://pkg.go.dev/golang.org/x/image/font#Metrics"><code>golang.org/x/image/font.Metrics</code></a> (<code>Ascent</code> と <code>Descent</code>) と <a href="https://pkg.go.dev/golang.org/x/image/font#MeasureString"><code>golang.org/x/image/font.MeasureString</code></a></td></tr>
   <tr><td><code>imageDstRegionOnTexture</code> (Kage)</td><td><code>imageDstOrigin</code> または <code>imageDstSize</code></td></tr>
-  <tr><td><code>imageDstTextureSize</code> (Kage)</td><td>ピクセルモード</td></tr>
+  <tr><td><code>imageDstTextureSize</code> (Kage)</td><td>(該当なし。ピクセルモードでは不要のはず)</td></tr>
   <tr><td><code>imageSrcRegionOnTexture</code> (Kage)</td><td><code>imageSrc0Origin</code> または <code>imageSrc0Size</code></td></tr>
-  <tr><td><code>imageSrcTextureSize</code> (Kage)</td><td>ピクセルモード</td></tr>
+  <tr><td><code>imageSrcTextureSize</code> (Kage)</td><td>(該当なし。ピクセルモードでは不要のはず)</td></tr>
 </table>
 <h3>その他</h3>
 <ul>
